--- a/COL2.ipynb
+++ b/COL2.ipynb
@@ -768,7 +768,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# 3) 可选：动态 bps 量级检查（用本次池化名义规模）\n",
+    "# 3) 动态 bps 量级检查（用本次池化名义规模）\n",
     "T_notional = np.abs(Wp_tot).sum() + np.abs(Wm_tot).sum()\n",
     "bps_equiv = 1e4 * annual_cost / max(T_notional, 1.0)\n",
     "print(f\"[check dynamic] annualized impact=${annual_cost:,.0f} ; \"\n",
